--- a/STest.App/STest.App/Resources/Languages/Language.resx
+++ b/STest.App/STest.App/Resources/Languages/Language.resx
@@ -234,4 +234,28 @@
   <data name="MULTIPLE_CHOICE_KEY" xml:space="preserve">
     <value>Multiple choice</value>
   </data>
+  <data name="QUESTION_KEY" xml:space="preserve">
+    <value>Question</value>
+  </data>
+  <data name="THIS_SHOULD_BE_THE_QUESTION_KEY" xml:space="preserve">
+    <value>There should be a question here</value>
+  </data>
+  <data name="THIS_SHOULD_BE_THE_CORRECT_ANSWER_KEY" xml:space="preserve">
+    <value>There should be a correct answer here</value>
+  </data>
+  <data name="CORRECT_ANSWER_KEY" xml:space="preserve">
+    <value>Correct answer</value>
+  </data>
+  <data name="CONSIDER_IN_THE_ASSESSMENT_KEY" xml:space="preserve">
+    <value>Consider in the assessment?</value>
+  </data>
+  <data name="YAS_KEY" xml:space="preserve">
+    <value>Yas</value>
+  </data>
+  <data name="NO_KEY" xml:space="preserve">
+    <value>No</value>
+  </data>
+  <data name="ASSESSMENT_FOR_CORRECT_ANSWER_KEY" xml:space="preserve">
+    <value>Assessment for correct answer:</value>
+  </data>
 </root>
