--- a/STest.App/STest.App/Resources/Languages/Language.uk-UA.resx
+++ b/STest.App/STest.App/Resources/Languages/Language.uk-UA.resx
@@ -249,7 +249,7 @@
   <data name="CONSIDER_IN_THE_ASSESSMENT_KEY" xml:space="preserve">
     <value>Враховувати в оцінку?</value>
   </data>
-  <data name="YAS_KEY" xml:space="preserve">
+  <data name="YES_KEY" xml:space="preserve">
     <value>Так</value>
   </data>
   <data name="NO_KEY" xml:space="preserve">
@@ -257,5 +257,26 @@
   </data>
   <data name="ASSESSMENT_FOR_CORRECT_ANSWER_KEY" xml:space="preserve">
     <value>Оцінка за правильну відповідь:</value>
+  </data>
+  <data name="ARE_YOU_SURE_KEY" xml:space="preserve">
+    <value>Ви впевнені?</value>
+  </data>
+  <data name="CANCEL_KEY" xml:space="preserve">
+    <value>Скасувати</value>
+  </data>
+  <data name="DATA_WILL_NOT_BE_SAVED_KEY" xml:space="preserve">
+    <value>Дані не будуть збережені!</value>
+  </data>
+  <data name="ANSWERS_KEY" xml:space="preserve">
+    <value>Відповіді</value>
+  </data>
+  <data name="THIS_SHOULD_BE_THE_ANSWER_KEY" xml:space="preserve">
+    <value>Тут має бути відповідь</value>
+  </data>
+  <data name="EACH_CORRECT_ANS_WORTH_ONE_POINT_IN_FINAL_ASSESSMENT_KEY" xml:space="preserve">
+    <value>Кожна правильна відповідь оцінюється в один бал у підсумковій оцінці</value>
+  </data>
+  <data name="CORRECT_ANSWERS_KEY" xml:space="preserve">
+    <value>Правильна відповіді</value>
   </data>
 </root>
