--- a/STest.App/STest.App/Resources/Languages/Language.uk-UA.resx
+++ b/STest.App/STest.App/Resources/Languages/Language.uk-UA.resx
@@ -279,4 +279,37 @@
   <data name="CORRECT_ANSWERS_KEY" xml:space="preserve">
     <value>Правильна відповіді</value>
   </data>
+  <data name="PREVIEW_KEY" xml:space="preserve">
+    <value>Попередній перегляд</value>
+  </data>
+  <data name="ENTER_STUDENT_NAME_KEY" xml:space="preserve">
+    <value>Введіть ім'я студента</value>
+  </data>
+  <data name="STUDENT_NOT_FOUND_KEY" xml:space="preserve">
+    <value>Студент не знайдений</value>
+  </data>
+  <data name="STUDENTS_KEY" xml:space="preserve">
+    <value>Студенти</value>
+  </data>
+  <data name="TIME_LEFT_KEY" xml:space="preserve">
+    <value>Залишилось часу</value>
+  </data>
+  <data name="START_KEY" xml:space="preserve">
+    <value>Розпочати</value>
+  </data>
+  <data name="CHOOSE_ONLY_ONE_CORRECT_ANSWER_KEY" xml:space="preserve">
+    <value>Виберіть лише одну правильну відповідь.</value>
+  </data>
+  <data name="CHOOSE_SEVERAL_CORRECT_ANSWERS_KEY" xml:space="preserve">
+    <value>Виберіть декілька правильних відповідей.</value>
+  </data>
+  <data name="INDICATE_BELOW_WHETHER_YOU_AGREE_WITH_STATEMENT_ABOVE_KEY" xml:space="preserve">
+    <value>Нижче вкажіть, чи згодні ви з наведеним вище твердженням.</value>
+  </data>
+  <data name="ENTER_CORRECT_ANSWER_IN_FIELD_BELOW_KEY" xml:space="preserve">
+    <value>Введіть правильну відповідь у полі нижче.</value>
+  </data>
+  <data name="COMPLETE_KEY" xml:space="preserve">
+    <value>Завершити</value>
+  </data>
 </root>
